# django_invest

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO  TransactionHistory_22575818.csv  backup.sh  createVirtualEnv.sh  docker-compose.yml  docker-entrypoint.sh  manage.py  middleware.py  pyproject.toml  requirements.txt  setlocal.sh
common/: Quotes.py  xirr.py
django-invest/: db.sqlite3  manage.py  reset.sh
django-invest/common/: xirr.py
django-invest/django_invest/: asgi.py  settings.py  urls.py  wsgi.py
django-invest/portfolio/: admin.py  models.py  views.py
django_invest/: db.sqlite3  settings.py  urls.py
django_invest/settings/: base.py  local.py  test.py
nginx/: nginx.conf
old/: urls.py  wsgi.py
old/common/: Quotes.py  xirr.py
old/portfolio/: admin.py  models.py  tables.py  urls.py
old/settings/: local.py  test.py
old/tests/: test_models.py  test_xirr.py
portfolio/: admin.py  forms.py  models.py  tables.py  urls.py  views.py
portfolio/migrations/: 0001_initial.py  0002_auto_20151103_0624.py  0002_auto_20151109_0956.py  0002_auto_20201118_2055.py  0003_auto_20151103_0630.py  0003_auto__add_field_symbol_quote_symbol.py  0004_remove_commodity_user.py  0005_auto_20151105_0807.py  0006_auto__del_field_symbol_symbol.py  0009_auto__chg_field_symbol_quote_symbol__chg_field_symbol_name__chg_field_.py  0011_auto__chg_field_transaction_price.py  0012_auto__chg_field_transaction_shares__chg_field_transaction_commission.py  (+1 more)
portfolio/templates/: base.html
src/: .coveragerc  run_tests.sh
tests/: test_quotes.py  test_xirr.py
util/: xirr.py
(+26 files in other folders)
