[tool.poetry]
name = "django_invest"
version = "0.1.0"
description = ""
authors = ["David Grant <davidgrant@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "3.1"
mysqlclient = "^2.0.1"
django-registration = "1.0"
mock = "^4.0.2"
django-model-utils = "1.4.0"
prospector = {extras = ["with_everything"], version = "^1.3.1"}
django-polymorphic = "0.7.2"
coverage = "^5.3"
django-tables2 = "2.3.3"
numpy = "^1.19.4"
python-dateutil = "^2.8.1"
black = "^20.8b1"
django-currentuser = "^0.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
