[tool.poetry]
name = "django-invest"
version = "0.1.0"
description = ""
authors = ["David Grant <davidgrant@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9.4"
django = "*"
numpy = "*"
python-dateutil = "*"
psycopg2 = "*"
django-extensions = "^3.1.3"

[tool.poetry.dev-dependencies]
mock = "*"
coverage = "*"
black = "*"
prospector = {extras = ["with_everything"], version = "*"}

[build-system]
requires = ["poetry-core=~1.1.6"]
build-backend = "poetry.core.masonry.api"
